--- a/availSeats.html
+++ b/availSeats.html
@@ -208,13 +208,13 @@ td {
 
 <!-- MAIN LAYOUT -->
 <div class="main-layout">
-  <div class="ads">Ads</div>
+  <div class="ads">.</div>
 
   <div class="results-center">
     <table id="resultsTable"></table>
   </div>
 
-  <div class="ads">Ads</div>
+  <div class="ads">.</div>
 </div>
 
 <!-- Choices.js -->
