--- a/availSeats.html
+++ b/availSeats.html
@@ -30,6 +30,24 @@ body {
   font-size: 14px;
   margin-top: 4px;
 }
+/* ================= NAV ================= */
+nav {
+  background-color: rgba(0, 0, 50, 0.9);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+nav a {
+  color: white;
+  padding: 12px 20px;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+nav a:hover {
+  background-color: #1a237e;
+}
 
 /* ===== SEARCH PANEL ===== */
 .search-panel {
