--- a/availSeats.html
+++ b/availSeats.html
@@ -201,7 +201,14 @@ td {
   <h1>Pakistan Railways</h1>
   <div>Check Seat / Berth Availability</div>
 </div>
+<!-- MENU -->
+<nav>
+  <a href="index.html">Home</a>
+  <a href="timing.html">Train Timing</a>
+  <a href="ticketing.html">Ticketing</a>
+  <a href="tracking.html" class="blink-tracking">Train Tracking</a>
 
+</nav>
 <!-- SEARCH PANEL -->
 <div class="search-panel">
   <div class="field">
