--- a/stations.html
+++ b/stations.html
@@ -80,6 +80,7 @@ li {
   <a href="index.html">Home</a>
   <a href="stations.html">Stations</a>
   <a href="timing.html">Train Timing</a>
+    <a href="availSeats.html">Seat Availability</a>
   <a href="ticketing.html">Ticketing</a>
   <a href="complaint.html">Register Complaint</a>
   <a href="contactus.html">Contact Us</a>
