--- a/ticketing.html
+++ b/ticketing.html
@@ -236,6 +236,8 @@ nav a:hover {
 
 <!-- ================= ONLINE BOOKING BUTTON ================= -->
 <div class="booking-panel">
+  <h3>Seats/Berths Availability</h3>
+  <button onclick="https://pakrail.online/availSeats.html">Book Tickets Online</button>
   <h3>Online Ticket Booking (Official)</h3>
   <button onclick="openTicketing()">Book Tickets Online</button>
 </div>
