--- a/availSeats.html
+++ b/availSeats.html
@@ -206,7 +206,7 @@ td {
   <a href="index.html">Home</a>
   <a href="timing.html">Train Timing</a>
   <a href="ticketing.html">Ticketing</a>
-  <a href="tracking.html" class="blink-tracking">Train Tracking</a>
+  <a href="tracking1.html" class="blink-tracking">Train Tracking</a>
 
 </nav>
 <!-- SEARCH PANEL -->
