--- a/timing.html
+++ b/timing.html
@@ -176,7 +176,7 @@ th {
   <a href="index.html">Home</a>
   <a href="stations.html">Stations</a>
   <a href="timing.html">Train Timing</a>
-    <a href="availSeats.html">Seat Availability</a>
+    <a href="availSeats.html" class="blink-tracking">Seat Availability</a>
   <a href="ticketing.html">Ticketing</a>
   <a href="complaint.html">Register Complaint</a>
   <a href="contactus.html">Contact Us</a>
