--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+  <meta name="description" content="Live train tracking of Pakistan Railways. Check real-time train status, delays and running position.">
+  <meta name="keywords" content="Pakistan Railways live tracking, train status Pakistan, Pak Rail tracking">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pakistan Railways – Sukkur Division</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
