--- a/availSeats.html
+++ b/availSeats.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Pakistan Railways – Seat Availability</title>
+<meta name="description" content="Live train tracking of Pakistan Railways. Check real-time train status, railway booking, delays and running position.">
+  <meta name="keywords" content="Pakistan Railways live tracking, train status Pakistan, railway ticket,Pak Rail tracking">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Choices.js CSS -->
