--- a/availSeats.html
+++ b/availSeats.html
@@ -352,7 +352,7 @@ function showResults(data) {
         <div class="seat">
           ${s.seatTypeNameEn} :
           <span class="seat-count">${s.surplus}</span>
-          (<span class="seat-fare">${s.price ?? "N/A"}</span>)
+          (Fare:<span class="seat-fare">Rs.${s.price ?? "N/A"}</span>)
         </div>
       `;
     });
