--- a/about-us.html
+++ b/about-us.html
@@ -37,5 +37,26 @@ h1, h2 { color: #2e7d32; }
 <h2>Contact</h2>
 <p>For feedback or suggestions, please visit our Contact page.</p>
 
+  <!-- ================== FOOTER START ================== -->
+<footer style="background:#2e7d32;color:#ffffff;padding:15px 10px;text-align:center;font-family:Arial, sans-serif;margin-top:40px;">
+  
+  <div style="margin-bottom:8px;">
+    © 2026 <strong>pakrail.online</strong>. All Rights Reserved.
+  </div>
+
+  <div style="margin-bottom:8px;">
+    <a href="privacy-policy.html" style="color:#ffeb3b;text-decoration:none;margin:0 8px;">Privacy Policy</a> |
+    <a href="disclaimer.html" style="color:#ffeb3b;text-decoration:none;margin:0 8px;">Disclaimer</a> |
+    <a href="about-us.html" style="color:#ffeb3b;text-decoration:none;margin:0 8px;">About Us</a> |
+    <a href="contact-us.html" style="color:#ffeb3b;text-decoration:none;margin:0 8px;">Contact</a>
+  </div>
+
+  <div style="font-size:13px;color:#dcdcdc;">
+    Independent information portal. Not affiliated with Pakistan Railways.
+  </div>
+
+</footer>
+<!-- ================== FOOTER END ================== -->
+
 </body>
 </html>
