--- a/ticketing.html
+++ b/ticketing.html
@@ -284,8 +284,10 @@ nav a:hover {
   <div class="panel-row">
     <div class="apps">
       <strong>Download Apps</strong><br>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg">
-      <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg">
+      <a href="https://play.google.com/store/apps/details?id=com.easyway.ticket.app&pli=1">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg"></a>
+      <a href="https://apps.apple.com/pk/app/rabta/id6446243993">
+      <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"></a>
     </div>
 
     <div>
