--- a/downloads.html
+++ b/downloads.html
@@ -129,7 +129,7 @@ function searchTable() {
 
   <tr>
     <td>C.L Form</td>
-    <td><a href="#" class="download-btn">Download</a></td>
+    <td><a href="clform.pd" class="download-btn" target="_blank">Download</a></td>
   </tr>
 
   <tr>
@@ -171,7 +171,7 @@ function searchTable() {
     <a href="contact-us.html">Contact</a>
   </div>
   <div style="font-size:13px;color:#dcdcdc;">
-    Independent information portal. Not affiliated with Pakistan Railways.
+    Independent information portal.
   </div>
 </footer>
 
