--- a/disclaimer.html
+++ b/disclaimer.html
@@ -17,7 +17,7 @@ h1, h2 { color: #2e7d32; }
 <p><strong>Last updated:</strong> January 2026</p>
 
 <h2>1. No Official Affiliation</h2>
-<p>pakrail.online is an independent informational website and is not affiliated with Pakistan Railways or any government authority.</p>
+<p>pakrail.online is an independent informational website.</p>
 
 <h2>2. Accuracy of Information</h2>
 <p>We try to keep information accurate and up to date, but we do not guarantee completeness or correctness. Data is sourced from third-party systems.</p>
