--- a/downloads.html
+++ b/downloads.html
@@ -129,7 +129,7 @@ function searchTable() {
 
   <tr>
     <td>C.L Form</td>
-    <td><a href="clform.pd" class="download-btn" target="_blank">Download</a></td>
+    <td><a href="clform.pdf" class="download-btn" target="_blank">Download</a></td>
   </tr>
 
   <tr>
