--- a/downloads.html
+++ b/downloads.html
@@ -129,7 +129,7 @@ function searchTable() {
 
   <tr>
     <td>C.L Form</td>
-    <td><a href="downloads\clform.pdf" target="_blank" class="download-btn">Download</a></td>
+    <td><a href="downloads/clform.pdf" target="_blank" class="download-btn">Download</a></td>
   </tr>
 
   <tr>
