--- a/downloads.html
+++ b/downloads.html
@@ -134,29 +134,41 @@ function searchTable() {
 
   <tr>
     <td>LFP Form</td>
-    <td><a href="#" class="download-btn">Download</a></td>
+    <td><a href="downloads/lfpform.pdf" target="_blank" class="download-btn">Download</a></td>
   </tr>
 
   <tr>
     <td>Pass Form</td>
-    <td><a href="#" class="download-btn">Download</a></td>
+    <td><a href="downloads/passform.pdf" target="_blank" class="download-btn">Download</a></td>
   </tr>
 
   <tr>
     <td>PTO Form</td>
-    <td><a href="#" class="download-btn">Download</a></td>
+    <td><a href="downloads/ptoform.pdf" target="_blank" class="download-btn">Download</a></td>
   </tr>
 
   <tr>
     <td>Pension Form</td>
-    <td><a href="#" class="download-btn">Download</a></td>
+    <td><a href="downloads/pensionform.pdf" target="_blank" class="download-btn">Download</a></td>
+  </tr>
+<tr>
+    <td>Family Pension Form</td>
+    <td><a href="downloads/familypensionform.pdf" target="_blank" class="download-btn">Download</a></td>
   </tr>
 
   <tr>
     <td>GPF Form</td>
-    <td><a href="#" class="download-btn">Download</a></td>
+    <td><a href="downloads/gpfform.pdf" target="_blank" class="download-btn">Download</a></td>
   </tr>
-
+<tr>
+    <td>Journalist Concession Form</td>
+    <td><a href="downloads/jcform.pdf" target="_blank" class="download-btn">Download</a></td>
+  </tr>
+<tr>
+    <td>Effected Person Application Form</td>
+    <td><a href="downloads/Effected_Person_Application_Form.pdf" target="_blank" class="download-btn">Download</a></td>
+  </tr>
+  
 </table>
 
 </div>
