--- a/stations.html
+++ b/stations.html
@@ -84,6 +84,7 @@ li {
   <a href="ticketing.html">Ticketing</a>
   <a href="complaint.html">Register Complaint</a>
   <a href="contactus.html">Contact Us</a>
+   <a href="downloads.html">Downloads</a>
   <a href="tracking1.html" class="blink-tracking">Train Tracking</a>
 </nav>
 
