--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@ main {
   <a href="ticketing.html">Ticketing</a>
   <a href="complaint.html"><b>Register Complaint</a></b>
    <a href="contactus.html">Contact Us</a>
+  <a href="downloads.html">Downloads</a>
    <a href="gallery.html">Gallery</a>
   <a href="tracking1.html" class="blink-tracking">Train Tracking</a>
 
