--- a/downloads.html
+++ b/downloads.html
@@ -115,7 +115,18 @@ function searchTable() {
 <div class="header">
   Pakistan Railways – Downloads
 </div>
-
+<nav>
+  <a href="index.html">Home</a>
+  <!--
+  <a href="stations.html">Stations</a>
+  <a href="timing.html">Train Timing</a>
+  <a href="ticketing.html">Ticketing</a>
+  <a href="complaint.html">Register Complaint</a>
+  <a href="contactus.html">Contact Us</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="tracking.html" class="blink-tracking">Train Tracking</a>
+  -->
+</nav>
 <!-- CONTENT -->
 <div class="container">
 
