--- a/downloads.html
+++ b/downloads.html
@@ -22,6 +22,24 @@ body {
   font-size: 22px;
   font-weight: bold;
 }
+/* ================= NAV ================= */
+nav {
+  background-color: rgba(0, 0, 50, 0.9);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+nav a {
+  color: white;
+  padding: 12px 20px;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+nav a:hover {
+  background-color: #1a237e;
+}
 
 /* Container */
 .container {
