--- a/index.html
+++ b/index.html
@@ -224,7 +224,12 @@ main {
   font-weight: bold;
   animation: blinkText 1s infinite;
 }
-
+/* ===== Seat Availablity ===== */
+.seat-avail {
+  color: yellow !important;
+  font-weight: bold;
+  
+}
 @keyframes blinkText {
   0%   { opacity: 1; }
   50%  { opacity: 0; }
@@ -275,7 +280,7 @@ main {
   <a href="index.html">Home</a>
   <a href="stations.html">Stations</a>
   <a href="timing.html">Train Timing</a>
-    <a href="availSeats.html" class="blink-tracking">Seat Availability</a>
+    <a href="availSeats.html" class="seat-avail">Seat Availability</a>
   <a href="ticketing.html">Ticketing</a>
   <a href="complaint.html"><b>Register Complaint</a></b>
    <a href="contactus.html">Contact Us</a>
