--- a/timing.html
+++ b/timing.html
@@ -176,11 +176,11 @@ th {
   <a href="index.html">Home</a>
   <a href="stations.html">Stations</a>
   <a href="timing.html">Train Timing</a>
-    <a href="availSeats.html" class="blink-tracking">Seat Availability</a>
+    <a href="availSeats.html" class="seat-avail">Seat Availability</a>
   <a href="ticketing.html">Ticketing</a>
   <a href="complaint.html">Register Complaint</a>
   <a href="contactus.html">Contact Us</a>
-  <a href="tracking1.html" class="blink-tracking">Train Tracking</a>
+  <a href="tracking1.html" class="seat-avail">Train Tracking</a>
 </nav>
 
 <!-- SEARCH PANEL -->
