--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ main {
    <a href="contactus.html">Contact Us</a>
   <a href="downloads.html">Downloads</a>
    <a href="gallery.html">Gallery</a>
-  <a href="tracking1.html" class="blink-tracking">Train Tracking</a>
+  <a href="tracking1.html" class="seat-avail">Train Tracking</a>
 
 </nav>
 
