--- a/contactus.html
+++ b/contactus.html
@@ -181,11 +181,11 @@ th {
   <a href="index.html">Home</a>
   <a href="stations.html">Stations</a>
   <a href="timing.html">Train Timing</a>
-    <a href="availSeats.html">Seat Availability</a>
+    <a href="availSeats.html" class="seat-avail">Seat Availability</a>
   <a href="ticketing.html">Ticketing</a>
   <a href="complaint.html">Register Complaint</a>
   <a href="contactus.html"><b>Contact Us</b></a>
-  <a href="tracking1.html" class="blink-tracking">Train Tracking</a>
+  <a href="tracking1.html" class="seat-avail">Train Tracking</a>
 </nav>
 
 <main>
