--- a/availSeats.html
+++ b/availSeats.html
@@ -194,6 +194,26 @@ td {
 .choices__list--dropdown::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+  
+/* Footer */
+footer {
+  background:#2e7d32;
+  color:#ffffff;
+  padding:15px 10px;
+  text-align:center;
+  font-family:Arial, sans-serif;
+  margin-top:40px;
+}
+
+footer a {
+  color:#ffeb3b;
+  text-decoration:none;
+  margin:0 8px;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
 </style>
 </head>
 <body>
