--- a/availSeats.html
+++ b/availSeats.html
@@ -221,7 +221,7 @@ footer a:hover {
 <!-- TOP PANEL -->
 <div class="top-panel">
   <h1>Pakistan Railways</h1>
-  <div>Check Seat / Berth Availability</div>
+  <div><strong>Check Seat / Berth Availability</strong></div>
 </div>
 <!-- MENU -->
 <nav>
