--- a/disclaimer.html
+++ b/disclaimer.html
@@ -16,7 +16,7 @@ h1, h2 { color: #2e7d32; }
 <h1>Disclaimer</h1>
 <p><strong>Last updated:</strong> January 2026</p>
 
-<h2>1. No Official Affiliation</h2>
+<h2>1. Affiliation</h2>
 <p>pakrail.online is an independent informational website.</p>
 
 <h2>2. Accuracy of Information</h2>
