--- a/tracker.html
+++ b/tracker.html
@@ -57,7 +57,7 @@
 
             <div class="controls">
                 <div>
-                    <label>Travel Date</label>
+                    <label>Depart: Date</label>
                     <input type="date" id="datePicker" onchange="updateTracker()">
                 </div>
                 <div>
