--- a/downloads.html
+++ b/downloads.html
@@ -205,14 +205,9 @@ function searchTable() {
 <!-- FOOTER -->
 <footer>
   <div>© 2026 <strong>pakrail.online</strong>. All Rights Reserved.</div>
-  <div>
-    <a href="privacy-policy.html">Privacy Policy</a> |
-    <a href="disclaimer.html">Disclaimer</a> |
-    <a href="about-us.html">About Us</a> |
-    <a href="contact-us.html">Contact</a>
-  </div>
+  
   <div style="font-size:13px;color:#dcdcdc;">
-    Independent information portal.
+  Pakistan Railways - Sukkur Division
   </div>
 </footer>
 
