--- a/suk.html
+++ b/suk.html
@@ -172,18 +172,7 @@ body.locked .page-content {
 </style>
 </head>
 
-<body class="locked">
-
-<!-- ===== LOGIN POPUP ===== -->
-<div class="login-overlay" id="loginOverlay">
-    <div class="login-box">
-        <h2>Login Required</h2>
-        <input type="text" id="username" placeholder="Username">
-        <input type="password" id="password" placeholder="Password">
-        <button onclick="checkLogin()">Login</button>
-        <div class="error" id="errorMsg">Invalid username or password</div>
-    </div>
-</div>
+<body>
 
 <!-- ===== PAGE CONTENT ===== -->
 <div class="page-content">
